feat: auto-tagging
